--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,6 @@ body{
     }
 }
 
-
-
 main{
     opacity: 0;
     position:absolute;
@@ -190,11 +188,7 @@ main{
     animation-fill-mode: forwards;
     display: block;
 }
-@keyframes Appear{
-    to{
-        opacity: 1;
-    }
-}
+
 main > h2{
     margin: 0;
     height: 1.5em;
@@ -202,15 +196,93 @@ main > h2{
 main >h2 >span{
     float: left;
     margin: 0;
-    animation:anime6 1s step-start;
+    opacity: 0;
+    transform: translateY(30%);
+    animation:anime6 1s ease;
     animation-fill-mode: forwards;
 }
 @keyframes anime6{
-    
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 main >h2 :nth-child(1){
-    animation-delay: 100ms;
+    animation-delay: 2100ms;
 }
-main >p{
+main >h2 :nth-child(2){
+    animation-delay: 2200ms;
+}
+main >h2 :nth-child(3){
+    animation-delay: 2300ms;
+}
+main >h2 :nth-child(4){
+    animation-delay: 2400ms;
+}
+main >h2 :nth-child(5){
+    animation-delay: 2500ms;
+}
+main >h2 :nth-child(6){
+    animation-delay: 2500ms;
+}
+main a{
+    position:relative;
+    position: relative;
+    transform:scaleX(0);
+    animation:Appear 0ms step-end;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+@keyframes Appear{
+    to{
+        opacity: 1;
+    }
+}
+main > .links a.a1{
+    animation-delay: 3100ms;
+}
+main > .links a.a2{
+    animation-delay: 3200ms;
+}
+main > .links a::after{
+    transform-origin: right;
+}
+main > .links a.a1::after{
+    animation-delay: 2600ms;
+}
+main > .links a.a2::after{
+    animation-delay: 2700ms;
+}
+
+main p{
     font-size: .4em;
+    margin: 0;
+}
+
+main a::after{
+    position: absolute;
+    content:'';
+    left:0;
+    top:0;
+    width:100%;
+    height: 100%;
+    background-color:white;
+    transform: scaleX(0);
+    transform-origin: right;
+    animation:anime7 1s ease;
+    animation-fill-mode: forwards;
+}
+
+@keyframes anime7{
+    50%{
+        transform: scaleX(1);
+        transform-origin: right;
+    }
+    51%{
+        transform-origin: left;
+    }
+    100%{
+        transform: scaleX(0);
+        transform-origin: left;
+    }
 }
